infra/cilium/templates/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-external
  namespace: kube-system
  labels:
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: hubble.ganam.app
    exposure.service-controller.io/type: internal
spec:
  selector:
    k8s-app: hubble-ui
  ports:
    - name: http
      port: 80
      targetPort: 8081
