infra/cilium/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Hubble"
    gethomepage.dev/description: "Network Observability"
    gethomepage.dev/icon: "cilium.png"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "hubble.ganam.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui-external
          port: 80
          weight: 1
